# C-plus-plus

./: 3by2-calculator  3by2-matrix-calculator.cpp  Readme.md  a.out  height-detecting-software.cpp  loop-01.cpp  quadratic-calculator.cpp  qudratic-calculator2.cpp  run-cal-by-formula  run-gambling-software  run-height-detecting-soft  run-loop-01  run-mean-calculator  run-pass-by-value-and-pass-by-refrence  run-qudratic-calculator2  run-simple-calculator  run-simple-subtraction-cal  simple-calculator.cpp  simple-subtraction-cal.cpp  structure-and-function  structure-and-function.cpp
OOP/: Readme.md  test.txt
OOP/composition/: main.cpp  rectangleclass.cpp  (+4 more)
arrayPointer/: Readme.md  build.sh  main.cpp  run
database/: Readme.md
dictionary/: Readme.md  build.sh  dictionaryBase.txt  main.cpp  run
email-app/: Readme.md  app.cpp  run-app
map/: Readme.md  map-01.cpp  map-02.cpp  map-03.cpp  run  run02  run03
sfml-projects/animination/: CMakeLists.txt  Readme.md  functions.cpp  main.cpp  main.h
sfml-projects/create_text_image/: CMakeLists.txt  main.cpp
sfml-projects/create_text_image2/: CMakeLists.txt  Readme.md  main.cpp
string-libraries/: Readme.md  erase.cpp  find.cpp  findletter.cpp  insert.cpp  length.cpp  replace.cpp  rfind.cpp  run-erase  run-find  run-findletter  run-inserting  run-length  run-replace  run-rfind  run-size  run-substr  run-swap  size.cpp  substring.cpp  swap.cpp
structural/: calculate-by-formula.cpp  gambling-software.cpp  height-detecting-software.cpp  mean-calculator.cpp  pass-by-value-and-pass-by-refrence.cpp  qudratic-calculator2.cpp  simple-calculator.cpp  simple-subtraction-cal.cpp  structure-and-function.cpp
vector/: clearing.cpp  erasing.cpp  error_handling.cpp  error_handling2.cpp  inserting.cpp  run-clearing  run-erasing  run-handling1  run-handling2  run-inserting
(+45 files in other folders)
